@@ -46,6 +46,15 @@
     </li>
     <li>[Bugfix] Modification of distinct metadata for multiple selected files (WebDAV, Azure, S3, OpenStack Swift)</li>
     <li>[Bugfix] Modification of distinct permissions for multiple selected files (FTP, SFTP)</li>
+    <li>[Bugfix] Wrong default editor selected (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/9256">#9256</a>)
+    </li>
+    <li>[Bugfix] Failure sorting by modification date in browser (<a
+            href="https://trac.cyberduck.io/ticket/9801">#9801</a>)
+    </li>
+    <li>[Bugfix] Invalidations for files with special characters (Cloudfront) (<a
+            href="https://trac.cyberduck.io/ticket/9748">#9748</a>)
+    </li>
 </ul>
 
 <p>
